# test_ets-project

./: .gitignore  README.md  main.cpp  makefile
headers/: calc.h  exept.h  pik.h  temp.h
sources/: calc.cpp
task/: .~lock.Постановка задачи.docx#  mo_pik.csv  mo_temp.csv  Постановка задачи.docx
testdata/: 1.test.csv
tests/: 1.test.cpp  CMakeLists.txt  CMakeUserPresets.json  load.sh
